Change size units to vmax wherever necessary

--- a/src/persentation/components/AgentsCheckedIn/agentsCheckedIn.css
+++ b/src/persentation/components/AgentsCheckedIn/agentsCheckedIn.css
@@ -1,5 +1,5 @@
 .checkIn-list {
-height: 800px;
+height: 1000px;  /* didn't made it vmax coz on small screen it will go in accordian*/
 width: 100%;
 overflow-y: scroll !important;
 scrollbar-width: thin !important;
@@ -7,7 +7,7 @@ scrollbar-color: #999 #f0f0f0 !important;
 }
 
 .listItem {
-    padding: 2px !important;
+    padding: 0.1vmax !important;
     font-size: smaller !important;
     
 }
