--- a/src/persentation/pages/login/login.css
+++ b/src/persentation/pages/login/login.css
@@ -4,7 +4,7 @@
     flex-direction:column ;
     justify-content:center;
     padding:3rem;
-    padding: 0 5px 5px 5px;
+    padding: 0 0.5vmax 0.5vmax 0.5vmax;
     height: 100%;
 }
 
