--- a/src/persentation/components/FilterAgentButtonGroup/filterbtn.css
+++ b/src/persentation/components/FilterAgentButtonGroup/filterbtn.css
@@ -16,7 +16,7 @@
     margin: 2em 0em;
 }
 
-@media (max-width:900px) {
+@media screen and (max-width:900px) {
     .btnGrp {
         font-size: xx-small !important;
     }
