--- a/src/persentation/layout/mainLayout/main.css
+++ b/src/persentation/layout/mainLayout/main.css
@@ -1,5 +1,4 @@
 .main-layout-box {
     background-color: rgb(247, 253, 245);
-    /* min-width: 100vw;
-    width: max-content; */
+    min-height: 100vh;
 }
